Add default title to issue templates

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,5 +1,6 @@
 name: Bug Report
 description: When a feature is not behaving as expected.
+title: "[Bug]: "
 labels: [bug]
 assignees: code807,quellus
 body:
