--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,5 +1,6 @@
 name: Feature Request
 description: Recommend a feature for consideration.
+title: "[Feature Request]: "
 labels: [enhancement]
 assignees: code807,quellus
 body:
