--- a/.github/workflows/publish_docs_to_wiki.yml
+++ b/.github/workflows/publish_docs_to_wiki.yml
@@ -1,19 +1,18 @@
 name: Publish docs to Wiki
 
-# Trigger this action only if there are changes pushed to the wiki/** directory under the main branch
 on:
   push:
     paths:
-      - wiki/** # This includes all sub folders
+      - wiki/**
     branches:
-      - main # This can be changed to any branch of your preference
+      - main
 
 env:
-  USER_TOKEN: ${{ secrets.WIKI_ACTION_TOKEN }} # This is the repository secret
-  USER_NAME: quellus # Enter the username of your (bot) account
-  USER_EMAIL: quellus7@gmail.com # Enter the e-mail of your (bot) account
-  OWNER: ${{ github.event.repository.owner.name }} # This is the repository owner
-  REPOSITORY_NAME: ${{ github.event.repository.name }} # This is the repository name
+  USER_TOKEN: ${{ secrets.WIKI_ACTION_TOKEN }}
+  USER_NAME: quellus
+  USER_EMAIL: quellus7@gmail.com
+  OWNER: ${{ github.event.repository.owner.name }}
+  REPOSITORY_NAME: ${{ github.event.repository.name }}
 
 jobs:
   publish_docs_to_wiki:
@@ -22,10 +21,6 @@ jobs:
     steps:  
       - name: Checkout repository
         uses: actions/checkout@v2
-
-      # 1. Create folder named `tmp_wiki`
-      # 2. Initialize Git
-      # 3. Pull old Wiki content
       - name: Pull content from wiki
         run: |
           mkdir tmp_wiki
@@ -34,8 +29,6 @@ jobs:
           git config user.name $USER_NAME
           git config user.email $USER_EMAIL
           git pull https://$USER_TOKEN@github.com/$OWNER/$REPOSITORY_NAME.wiki.git
-      # 4. Synchronize differences between `wiki` & `tmp_wiki`
-      # 5. Push new Wiki content
       - name: Push content to wiki
         run: |
           rsync -av --delete wiki/ tmp_wiki/ --exclude .git
