Added GDTuber version to bug report template

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -35,10 +35,17 @@ body:
   - type: input
     id: version
     attributes:
-      label: Godot Version
+      label: GDTuber Version
       placeholder: 1.2.3 (USE AN ACTUAL VERSION NUMBER)
     validations:
       required: true
+  - type: input
+    id: version
+    attributes:
+      label: Godot Version (if running in debug)
+      placeholder: 1.2.3 (USE AN ACTUAL VERSION NUMBER)
+    validations:
+      required: false
   - type: dropdown
     id: platforms
     attributes:
