updated ignores for docs and VSCode

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,5 @@ mono_crash.*.json
 # Those annoying tmp files Godot keeps creating
 *.tmp
 
-# VSCode config 
-settings.json
-launch.json
+# VSCode 
+.vscode/
