--- a/.github/workflows/publish_docs_to_wiki.yml
+++ b/.github/workflows/publish_docs_to_wiki.yml
@@ -31,7 +31,7 @@ jobs:
           git pull https://$USER_TOKEN@github.com/$OWNER/$REPOSITORY_NAME.wiki.git
       - name: Push content to wiki
         run: |
-          rsync -av --delete wiki/ tmp_wiki/ --exclude .git
+          rsync --checksum -av --delete wiki/ tmp_wiki/ --exclude .git
           cd tmp_wiki
           git add .
           git commit -m "Update Wiki content" 
